--- a/Regressao_Linear.ipynb
+++ b/Regressao_Linear.ipynb
@@ -1787,7 +1787,7 @@
     {
      "data": {
       "text/plain": [
-       "<Axes: title={'center': 'istribuição de frequências dos resíduos'}, xlabel='Litros', ylabel='Densidade'>"
+       "<Axes: title={'center': 'Distribuição de frequências dos resíduos'}, xlabel='Litros', ylabel='Densidade'>"
       ]
      },
      "execution_count": 136,
@@ -1808,7 +1808,7 @@
    "source": [
     "ax = sns.distplot(residuo)\n",
     "ax.figure.set_size_inches(12,6)\n",
-    "ax.set_title('istribuição de frequências dos resíduos', fontsize=20)\n",
+    "ax.set_title('Distribuição de frequências dos resíduos', fontsize=20)\n",
     "ax.set_xlabel('Litros', fontsize=16)\n",
     "ax.set_ylabel('Densidade', fontsize=16)\n",
     "ax"
